/**
 * src/services/mediator/grpc-client.ts
 * 
 * gRPC client for communicating with the Terra mediator service.
 * 
 * The mediator is responsible for:
 * - Receiving Kagent CRDs from Terra
 * - Deploying agents to Kubernetes clusters via Kagent
 * - Monitoring deployment status
 * - Sending callbacks to Terra with deployment results
 * 
 * This is a STUB implementation. Replace with actual gRPC client when
 * the mediator API is ready.
 * 
 * Expected flow:
 * 1. Terra calls sendKagentCRDToMediator()
 * 2. Mediator receives CRD and starts deployment
 * 3. Mediator returns immediately with deploymentId
 * 4. Mediator deploys to cluster asynchronously
 * 5. Mediator calls back to Terra with deployment result
 * 6. Terra emits terra.agent.deployed event
 * 
 * TODO: Implement actual gRPC client
 * - Define .proto files
 * - Generate gRPC client code
 * - Implement connection pooling
 * - Add authentication/TLS
 * - Add retry logic
 * - Add timeout configuration
 */

import { logger } from '../../utils/logger.js';
import type { KagentCRD } from '../../types/agentManifest.js';

// ============================================================================
// TYPES
// ============================================================================

/**
 * Result from mediator deployment request.
 */
export interface MediatorDeploymentResult {
  /** Whether the request was accepted */
  success: boolean;
  /** Unique deployment ID from mediator */
  deploymentId?: string;
  /** Error message if request failed */
  error?: string;
}

/**
 * Mediator configuration options.
 */
export interface MediatorClientConfig {
  /** Mediator gRPC endpoint */
  endpoint: string;
  /** Connection timeout in milliseconds */
  timeout?: number;
  /** Whether to use TLS */
  useTLS?: boolean;
  /** TLS certificate path */
  tlsCert?: string;
  /** TLS key path */
  tlsKey?: string;
}

// ============================================================================
// CONFIGURATION
// ============================================================================

const MEDIATOR_ENDPOINT = process.env.MEDIATOR_ENDPOINT || 'localhost:50052';
const MEDIATOR_TIMEOUT = parseInt(process.env.MEDIATOR_TIMEOUT || '30000', 10);
const MEDIATOR_USE_TLS = process.env.MEDIATOR_USE_TLS === 'true';

/**
 * Default mediator client configuration.
 */
const defaultConfig: MediatorClientConfig = {
  endpoint: MEDIATOR_ENDPOINT,
  timeout: MEDIATOR_TIMEOUT,
  useTLS: MEDIATOR_USE_TLS,
};

// ============================================================================
// STUB IMPLEMENTATION
// ============================================================================

/**
 * Send Kagent CRD to mediator for deployment.
 * 
 * This is a STUB implementation that simulates the mediator interaction.
 * 
 * In production, this should:
 * 1. Establish gRPC connection to mediator
 * 2. Send DeployAgentRequest with CRD and cluster ID
 * 3. Receive DeployAgentResponse with deployment ID
 * 4. Return result
 * 
 * The actual deployment happens asynchronously in the mediator.
 * The mediator will call back to Terra when deployment completes.
 * 
 * @param crd - Kagent CRD to deploy
 * @param clusterId - Target cluster ID
 * @param config - Optional mediator client configuration
 * @returns Deployment result with ID or error
 * 
 * @example
 * ```typescript
 * const result = await sendKagentCRDToMediator(crd, 'cluster-123');
 * if (result.success) {
 *   console.log('Deployment requested:', result.deploymentId);
 * }
 * ```
 */
export async function sendKagentCRDToMediator(
  crd: KagentCRD,
  clusterId: string,
  config: Partial<MediatorClientConfig> = {}
): Promise<MediatorDeploymentResult> {
  const finalConfig = { ...defaultConfig, ...config };

  logger.info({
    agentName: crd.metadata.name,
    namespace: crd.metadata.namespace,
    clusterId,
    mediatorEndpoint: finalConfig.endpoint,
  }, '[STUB] Sending Kagent CRD to mediator');

  try {
    // TODO: Replace this stub with actual gRPC call
    // 
    // Example implementation:
    // 
    // const client = createMediatorClient(finalConfig);
    // const request = {
    //   crd: JSON.stringify(crd),
    //   clusterId,
    //   requestId: generateRequestId(),
    // };
    // const response = await client.DeployAgent(request, {
    //   deadline: Date.now() + finalConfig.timeout,
    // });
    // return {
    //   success: response.success,
    //   deploymentId: response.deploymentId,
    //   error: response.error,
    // };

    // Simulate network delay
    await simulateNetworkDelay(100, 500);

    // Simulate occasional failures (10% chance)
    if (Math.random() < 0.1) {
      throw new Error('Simulated mediator connection failure');
    }

    // Generate mock deployment ID
    const deploymentId = `deploy-${Date.now()}-${Math.random().toString(36).substr(2, 9)}`;

    logger.info({
      agentName: crd.metadata.name,
      clusterId,
      deploymentId,
    }, '[STUB] Kagent CRD sent to mediator successfully');

    // In a real implementation, the mediator would:
    // 1. Accept this request and return immediately
    // 2. Deploy to cluster asynchronously
    // 3. Call back to Terra with terra.agent.deployed event

    return {
      success: true,
      deploymentId,
    };
  } catch (error) {
    const errorMessage = error instanceof Error ? error.message : String(error);

    logger.error({
      agentName: crd.metadata.name,
      clusterId,
      error: errorMessage,
      mediatorEndpoint: finalConfig.endpoint,
    }, '[STUB] Failed to send Kagent CRD to mediator');

    return {
      success: false,
      error: errorMessage,
    };
  }
}

/**
 * Check mediator health/connectivity.
 * 
 * @param config - Optional mediator client configuration
 * @returns True if mediator is reachable
 */
export async function checkMediatorHealth(
  config: Partial<MediatorClientConfig> = {}
): Promise<boolean> {
  const finalConfig = { ...defaultConfig, ...config };

  logger.debug({
    endpoint: finalConfig.endpoint,
  }, '[STUB] Checking mediator health');

  try {
    // TODO: Implement actual health check
    // const client = createMediatorClient(finalConfig);
    // const response = await client.HealthCheck({}, {
    //   deadline: Date.now() + 5000,
    // });
    // return response.healthy;

    await simulateNetworkDelay(50, 100);
    return true;
  } catch (error) {
    logger.error({
      endpoint: finalConfig.endpoint,
      error: error instanceof Error ? error.message : String(error),
    }, '[STUB] Mediator health check failed');

    return false;
  }
}

// ============================================================================
// UTILITIES
// ============================================================================

/**
 * Simulate network delay for stub implementation.
 * 
 * @param min - Minimum delay in milliseconds
 * @param max - Maximum delay in milliseconds
 */
async function simulateNetworkDelay(min: number, max: number): Promise<void> {
  const delay = Math.floor(Math.random() * (max - min + 1)) + min;
  await new Promise((resolve) => setTimeout(resolve, delay));
}

// ============================================================================
// TODO: ACTUAL GRPC CLIENT IMPLEMENTATION
// ============================================================================

/*
 * When implementing the actual gRPC client, you'll need:
 * 
 * 1. Define .proto file:
 * 
 * ```proto
 * syntax = "proto3";
 * package terra.mediator;
 * 
 * service MediatorService {
 *   rpc DeployAgent(DeployAgentRequest) returns (DeployAgentResponse);
 *   rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
 * }
 * 
 * message DeployAgentRequest {
 *   string crd = 1;  // JSON-serialized Kagent CRD
 *   string cluster_id = 2;
 *   string request_id = 3;
 * }
 * 
 * message DeployAgentResponse {
 *   bool success = 1;
 *   string deployment_id = 2;
 *   string error = 3;
 * }
 * ```
 * 
 * 2. Generate TypeScript code:
 * 
 * ```bash
 * npm install @grpc/grpc-js @grpc/proto-loader
 * protoc --plugin=protoc-gen-ts=./node_modules/.bin/protoc-gen-ts \
 *   --ts_out=./src/generated \
 *   --js_out=import_style=commonjs,binary:./src/generated \
 *   mediator.proto
 * ```
 * 
 * 3. Create client:
 * 
 * ```typescript
 * import * as grpc from '@grpc/grpc-js';
 * import * as protoLoader from '@grpc/proto-loader';
 * 
 * const packageDefinition = protoLoader.loadSync('mediator.proto');
 * const proto = grpc.loadPackageDefinition(packageDefinition);
 * 
 * function createMediatorClient(config: MediatorClientConfig) {
 *   const credentials = config.useTLS
 *     ? grpc.credentials.createSsl()
 *     : grpc.credentials.createInsecure();
 *   
 *   return new proto.terra.mediator.MediatorService(
 *     config.endpoint,
 *     credentials
 *   );
 * }
 * ```
 */